--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,15 @@
 }
 
 .bg-color-three-reasons {
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
+}
+
+.bg-color-skills {
+    background-color: #ffffff;
 }
 
 .bg-color-work-history {
@@ -17,11 +21,19 @@
 }
 
 .bg-color-contact {
-    background-color: #fff;
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
 }
 
 .ui-menu-color-home {
-    background-color: #e67322;
+    background-color: #e67e22;
 }
 
 .ui-menu-color-resume {
@@ -33,7 +45,23 @@
 }
 
 .ui-menu-color-download {
+    background-color: #d9a81d;
+}
+
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     background-color: #525252;
+    color: #555;
 }
 
 /* --------------------------------------Special paddings/margins/text */
@@ -60,18 +88,13 @@ h1,h2,h3,h4 {
     display: table;
 }
 
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
-}
-
 .section-heading, .history-heading {
     font-family: 'Exo', sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
+
 
 /* --------------------------------------Heading */
 
@@ -109,14 +132,6 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
-}
-
-.list-inline-item:not(:last-child) {
-    margin: 0;
-}
-
-.menucontainer {
-    font-size: 0;
 }
 
 #nav {
@@ -175,7 +190,7 @@ footer {
     margin: 0;
 }
 
-.cv-pdf i {
+footer .cv-pdf i {
     font-size: 18px;
     color: #fafafa;
     text-align: center;
@@ -186,7 +201,7 @@ footer {
     -o-transition: all 0.35s ease-in-out;
 }
 
-.cv-pdf i:hover {
+footer .cv-pdf i:hover {
     color: #e84610;
 }
 
@@ -267,7 +282,6 @@ footer {
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
@@ -353,9 +367,21 @@ button[type="submit"] {
     background-color: #e84610;
 }
 
+/* --------------------------------------Map */
+
+div#map {
+    min-height: 360px;
+}
+
 /* --------------------------------------Media Queries */
 
 @media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
         padding-top: 30px;
         min-height: 240px;
